<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.avaje</groupId>
    <artifactId>avaje-jsonb-parent</artifactId>
    <version>0.7-SNAPSHOT</version>
  </parent>

  <artifactId>blackbox-test</artifactId>
  <name>jsonb blackbox test</name>
  <description>test module</description>

  <properties>
    <maven.deploy.skip>true</maven.deploy.skip>
    <java.version>17</java.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <dependencies>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jsonb</artifactId>
      <version>0.7-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jsonb-generator</artifactId>
      <version>0.7-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- test dependencies -->
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>junit</artifactId>
      <version>1.0</version>
      <scope>test</scope>
    </dependency>

  </dependencies>


  <build>
    <plugins>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
